--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ logging.level:
   org.hibernate.SQL: debug
   # ? ???? ?? ???????
   org.hibernate.type: trace
+
+#  main:
+#    allow-bean-definition-overriding: true
