--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,13 @@ spring:
   profiles:
     active: local
   datasource:
-    url: jdbc:h2:tcp://localhost/~/customAuth
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:tcp://localhost/~/customAuth
+#    username: sa
+#    password:
+    url: jdbc:mysql://localhost:3306/til?useUnicode=true&characterEncoding=utf8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
   jwt:
     secret: fajdklfajklsdfjklasfjaiosdfklajfklasjfklasdjf
   jpa:
@@ -15,7 +18,6 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
-
 logging.level:
   org.hibernate.SQL: debug
   # ? ???? ?? ???????
