--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,17 @@ spring:
   profiles:
     active: local
   datasource:
+    url: jdbc:mysql://projectname-rds.c1fjxzoeqbqw.ap-northeast-2.rds.amazonaws.com:3306/til?useUnicode=true&characterEncoding=utf8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: admin
+    password: password
 #    url: jdbc:h2:tcp://localhost/~/customAuth
 #    username: sa
 #    password:
-    url: jdbc:mysql://localhost:3306/til?useUnicode=true&characterEncoding=utf8
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: password
+#    url: jdbc:mysql://localhost:3306/til?useUnicode=true&characterEncoding=utf8
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: password
   jwt:
     secret: fajdklfajklsdfjklasfjaiosdfklajfklasjfklasdjf
   jpa:
